# bobj-converter

./: .env.example  .gitignore  Makefile  README.md  fix.py  fix2.py  fix_domain.py  fix_hana.py
.github/: SECRETS.md
.github/workflows/: ci.yml  deploy-dev.yml  deploy-prod.yml  rollback.yml
backend/: manifest.yml  manifest.yml.bak  pyproject.toml  requirements-dev.txt  requirements.txt  runtime.txt
backend/app/: main.py
backend/app/auth/: xsuaa.py
backend/app/db/: hana.py
backend/app/models/: schemas.py
backend/app/monitoring/: logging.py  metrics.py  retry.py
backend/app/routers/: admin.py  conversion.py  health.py  jobs.py  projects.py
backend/app/services/: ai_core.py  datasphere.py  sac.py
backend/tests/: conftest.py
backend/tests/integration/: test_pipeline.py
backend/tests/unit/: test_app.py
db/: schema.sql
frontend/: index.html  login.html  manifest.yml
security/: xs-security.json
