[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bobj-converter"
version = "1.0.0"
requires-python = ">=3.12"

# ── Pytest ─────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths      = ["tests"]
asyncio_mode   = "auto"
log_cli        = true
log_cli_level  = "INFO"
addopts        = "-v --tb=short"
filterwarnings = [
  "ignore::DeprecationWarning",
]

# ── Coverage ───────────────────────────────────────────────────────────────────
[tool.coverage.run]
source   = ["app"]
omit     = ["app/__init__.py", "tests/*"]
branch   = true

[tool.coverage.report]
show_missing   = true
skip_covered   = false
fail_under     = 70        # fail CI if coverage drops below 70%
exclude_lines  = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]

# ── Ruff (linting + formatting) ────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length    = 100
src            = ["app", "tests"]

[tool.ruff.lint]
select  = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore  = [
  "E501",   # line too long (handled by formatter)
  "B008",   # do not perform function calls in default args (FastAPI Depends)
  "SIM108", # ternary operator (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Mypy ───────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version         = "3.12"
strict                 = false
ignore_missing_imports = true
warn_unused_ignores    = true
warn_return_any        = false
files                  = ["app"]
